--- a/bib/async01.bib
+++ b/bib/async01.bib
@@ -18,7 +18,7 @@ access to shared data; and using the theory we can prove that they
 have no race conditions, regardless of the behaviour of the program's
 environment.  Shazam!
 },
-   url = {http://community.haskell.org/~simonmar/papers/async.pdf},
+   url = {http://simonmar.github.io/papers/async.pdf},
    doi = {http://doi.acm.org/10.1145/378795.378858},
    isbn = {1-58113-414-2},
    pages = {274--285},
