--- a/bib/concsubstrate07.bib
+++ b/bib/concsubstrate07.bib
@@ -18,7 +18,7 @@ improves the safety of concurrency support; it also provides more
 customizability of concurrency features, as new concurrency features
 can be developed as Haskell library packages and deployed modularly.
 },
-   url = {http://community.haskell.org/~simonmar/papers/conc-substrate.pdf},
+   url = {http://simonmar.github.io/papers/conc-substrate.pdf},
    doi = {{http://doi.acm.org/10.1145/1291201.1291217}},
    isbn = {{978-1-59593-674-5}},
    pages = {{107--118}},
