--- a/bib/exploringbarrier04.bib
+++ b/bib/exploringbarrier04.bib
@@ -20,6 +20,6 @@ We also show how the same code specialisation techniques
 can be used to eliminate the write barrier in a generational
 collector.
 },
-   url = {http://community.haskell.org/~simonmar/papers/ExploringBarrierToEntry.pdf},
+   url = {http://simonmar.github.io/papers/ExploringBarrierToEntry.pdf},
    publisher = {ACM}
 }
