--- a/bib/extexceptions06.bib
+++ b/bib/extexceptions06.bib
@@ -15,7 +15,7 @@ object-oriented framework OOHaskell with our design, such that
 OOHaskell objects can be thrown and caught as exceptions, with full
 support for implicit OOHaskell subtyping in the @catch@ operator.
 },
-   url = {http://community.haskell.org/~simonmar/papers/ext-exceptions.pdf},
+   url = {http://simonmar.github.io/papers/ext-exceptions.pdf},
    location = {Portland, Oregon},
    publisher = {ACM Press}
 }
