--- a/bib/ghcidebugger07.bib
+++ b/bib/ghcidebugger07.bib
@@ -20,7 +20,7 @@ the type of runtime values in a polymorphic context.  Our
 implementation is light on complexity, and was integrated into GHC
 without significant upheaval.
 },
-   url = {http://community.haskell.org/~simonmar/papers/ghci-debug.pdf},
+   url = {http://simonmar.github.io/papers/ghci-debug.pdf},
    doi = {{http://doi.acm.org/10.1145/1291201.1291217}},
    isbn = {{978-1-59593-674-5}},
    pages = {{13--24}},
