--- a/bib/ghcinliner02.bib
+++ b/bib/ghcinliner02.bib
@@ -20,7 +20,7 @@ the Glasgow Haskell compiler.  We focus mainly on the algorithmic
 aspects, but we also provide some indicative measurements to
 substantiate the importance of various aspects of the inliner.
 },
-   url = {http://community.haskell.org/~simonmar/papers/inline.pdf},
+   url = {http://simonmar.github.io/papers/inline.pdf},
    pages = {393--434},
    volume = {12},
    number = {4+5}
