--- a/bib/haddock02.bib
+++ b/bib/haddock02.bib
@@ -15,6 +15,6 @@ programmer's freedom over the structure of the implementation.  The
 internal structure and implementation of Haddock is also discussed.
 
 },
-   url = {http://community.haskell.org/~simonmar/papers/haddock.pdf},
+   url = {http://simonmar.github.io/papers/haddock.pdf},
    publisher = {ACM Press}
 }
