--- a/bib/lockfreedatastructures06.bib
+++ b/bib/lockfreedatastructures06.bib
@@ -12,6 +12,6 @@ multi-processor systems the simpler lock free implementations offer
 superior performance when compared to their corresponding lock based
 implementations.
 },
-   url = {http://community.haskell.org/~simonmar/papers/lockfreedatastructures.pdf},
+   url = {http://simonmar.github.io/papers/lockfreedatastructures.pdf},
    location = {Fuji Susono, JAPAN}
 }
