--- a/bib/par-tutorial-cefp-2012.bib
+++ b/bib/par-tutorial-cefp-2012.bib
@@ -11,7 +11,7 @@ asynchronous exceptions, Software Transactional Memory, the Foreign
 Function Interface, and briefly look at the construction of high-speed
 network servers in Haskell.
 },
-   url = {http://community.haskell.org/~simonmar/papers/par-tutorial-cefp-2012.pdf},
+   url = {http://simonmar.github.io/papers/par-tutorial-cefp-2012.pdf},
    pages = {339--401},
    volume = {7241},
    series = {LNCS},
