--- a/bib/safe-haskell-2012.bib
+++ b/bib/safe-haskell-2012.bib
@@ -20,7 +20,7 @@ execute arbitrary untrusted code with no overhead. The use of Safe
 Haskell greatly simplifies this task and allows the use of a large
 body of existing code and tools.
 },
-   url = {http://community.haskell.org/~simonmar/papers/safe-haskell.pdf},
+   url = {http://simonmar.github.io/papers/safe-haskell.pdf},
    location = {Copenhagen, Denmark},
    publisher = {ACM}
 }
