--- a/bib/stm05.bib
+++ b/bib/stm05.bib
@@ -15,5 +15,5 @@ are present (e.g. freedom from deadlock), but in addition we describe
 new modular forms of \emph{blocking} and \emph{choice} that
 have been inaccessible in earlier work.
 },
-   url = {http://community.haskell.org/~simonmar/papers/stm.pdf}
+   url = {http://simonmar.github.io/papers/stm.pdf}
 }
