--- a/bib/vshaskell05.bib
+++ b/bib/vshaskell05.bib
@@ -23,7 +23,7 @@ programmatic access to GHC itself.  Furthermore, development of the
 Visual Haskell plugin required industrial-strength foreign language
 interoperability; we describe all our experiences in detail.
 },
-   url = {http://community.haskell.org/~simonmar/papers/vshaskell.pdf},
+   url = {http://simonmar.github.io/papers/vshaskell.pdf},
    doi = {http://doi.acm.org/10.1145/1088348.1088350},
    isbn = {1-59593-071-X},
    pages = {5--16},
