--- a/bib/evalapplyjfp06.bib
+++ b/bib/evalapplyjfp06.bib
@@ -17,7 +17,7 @@ state-of-the-art compiler for Haskell.
 Our conclusion is simple, and contradicts our initial intuition: 
 compiled implementations should use eval/apply.
 },
-   url = {http://community.haskell.org/~simonmar/papers/evalapplyjfp06.pdf},
+   url = {http://simonmar.github.io/papers/evalapplyjfp06.pdf},
    pages = {415--449},
    volume = {16},
    number = {4--5}
