--- a/bib/strategies-2010.bib
+++ b/bib/strategies-2010.bib
@@ -26,7 +26,7 @@ runtime overheads of the new formulation relative to the original are
 low, and the new strategies even yield slightly better speedups on
 average than the original strategies.
 },
-   url = {http://community.haskell.org/~simonmar/papers/strategies.pdf},
+   url = {http://simonmar.github.io/papers/strategies.pdf},
    location = {Baltimore, USA},
    publisher = {ACM}
 }
