--- a/bib/threadscope-09.bib
+++ b/bib/threadscope-09.bib
@@ -22,7 +22,7 @@ The paper illustrates the use of ThreadScope through a number of case
 studies, and describes some useful methodologies for parallelizing
 Haskell programs.
 },
-   url = {http://community.haskell.org/~simonmar/papers/threadscope.pdf},
+   url = {http://simonmar.github.io/papers/threadscope.pdf},
    location = {Edinburgh, Scotland},
    publisher = {ACM}
 }
