--- a/bib/concffi04.bib
+++ b/bib/concffi04.bib
@@ -21,6 +21,6 @@ language enough flexibility to provide cheap lightweight threads,
 while still providing the programmer with control over the mapping
 between internal threads and external threads where necessary.
 },
-   url = {http://simonmar.github.io/papers/conc-ffi.pdf},
+   url = {http://simonmar.github.io/bib/papers/conc-ffi.pdf},
    pages = {57--68}
 }
