--- a/bib/evalapply04.bib
+++ b/bib/evalapply04.bib
@@ -13,7 +13,7 @@ implementing both models in a state-of-the-art compiler for
 Haskell.Our conclusion is simple, and contradicts our initial
 intuition: compiled implementations should use eval/apply.
 },
-   url = {http://simonmar.github.io/papers/eval-apply.pdf},
+   url = {http://simonmar.github.io/bib/papers/eval-apply.pdf},
    doi = {http://doi.acm.org/10.1145/1016848.1016856},
    isbn = {1-58113-905-5},
    pages = {4--15},
