--- a/bib/local-gc-2011.bib
+++ b/bib/local-gc-2011.bib
@@ -14,7 +14,7 @@ full-scale implementation of Haskell, and demonstrate that our
 local-heap collector substantially improves scaling, peak performance,
 and robustness.
 },
-   url = {http://simonmar.github.io/papers/local-gc.pdf},
+   url = {http://simonmar.github.io/bib/papers/local-gc.pdf},
    location = {{San Jose, California}},
    publisher = {ACM}
 }
