--- a/bib/monad-par-2011.bib
+++ b/bib/monad-par-2011.bib
@@ -16,7 +16,7 @@ scheduler implemented as a Haskell library, and we show that it
 performs at least as well as the existing parallel programming models
 in Haskell.
 },
-   url = {http://simonmar.github.io/papers/monad-par.pdf},
+   url = {http://simonmar.github.io/bib/papers/monad-par.pdf},
    location = {Tokyo, Japan},
    publisher = {ACM}
 }
