--- a/bib/multicore-ghc-09.bib
+++ b/bib/multicore-ghc-09.bib
@@ -14,6 +14,6 @@ make such implementations hard to build.  Our measurements are
 necessarily detailed and specific, but they are reproducible, and we
 believe that they offer some general insights.
 },
-   url = {http://simonmar.github.io/papers/multicore-ghc.pdf},
+   url = {http://simonmar.github.io/bib/papers/multicore-ghc.pdf},
    location = {Edinburgh, Scotland}
 }
