--- a/bib/multiproc05.bib
+++ b/bib/multiproc05.bib
@@ -15,7 +15,7 @@ Our results are preliminary but promising: we can demonstrate wall-clock speedup
 of a serious application (GHC itself), even with only two processors, compared
 to the same application compiled for a uni-processor.
 },
-   url = {http://simonmar.github.io/papers/multiproc.pdf},
+   url = {http://simonmar.github.io/bib/papers/multiproc.pdf},
    doi = {http://doi.acm.org/10.1145/1088348.1088354},
    isbn = {1-59593-071-X},
    pages = {49--61},
