--- a/bib/nonstophaskell00.bib
+++ b/bib/nonstophaskell00.bib
@@ -21,7 +21,7 @@
  as the STG-machine with very short mutator pause times and with
  negligible overhead on execution time.
 },
-   url = {http://simonmar.github.io/papers/nonstop.pdf},
+   url = {http://simonmar.github.io/bib/papers/nonstop.pdf},
    doi = {http://doi.acm.org/10.1145/351240.351265},
    isbn = {1-58113-202-6},
    pages = {257--267},
