--- a/bib/parallel-gc-08.bib
+++ b/bib/parallel-gc-08.bib
@@ -13,7 +13,7 @@ results are encouraging: we demonstrate wall-clock speedups of on
 average a factor of 2 in GC time on a commodity 4-core machine with no
 programmer intervention, compared to our best sequential GC.
 },
-   url = {http://simonmar.github.io/papers/parallel-gc.pdf},
+   url = {http://simonmar.github.io/bib/papers/parallel-gc.pdf},
    location = {{Tucson, Arizona}},
    publisher = {ACM}
 }
