--- a/bib/pointertagging07.bib
+++ b/bib/pointertagging07.bib
@@ -26,7 +26,7 @@ As part of our investigations we also discovered that one optimisation
 in the STG-machine, vectored-returns, is no longer worthwhile and we
 explain why.
 },
-   url = {http://simonmar.github.io/papers/ptr-tagging.pdf},
+   url = {http://simonmar.github.io/bib/papers/ptr-tagging.pdf},
    location = {Freiburg, Germany},
    publisher = {ACM Press}
 }
