--- a/bib/weakptrs99.bib
+++ b/bib/weakptrs99.bib
@@ -21,7 +21,7 @@ of our discussion is on Haskell, there is nothing Haskell-specific
 about most of the primitives, which could readily be used in other
 settings.  
 },
-   url = {http://simonmar.github.io/papers/weak.pdf},
+   url = {http://simonmar.github.io/bib/papers/weak.pdf},
    publisher = {Springer-Verlag},
    series = {LNCS}
 }
