--- a/bib/assoc05.bib
+++ b/bib/assoc05.bib
@@ -21,7 +21,7 @@ ensures that the addition of associated data types to an
 existing Haskell compiler only requires changes to the front
 end.
 },
-   url = {http://simonmar.github.io/papers/assoc.pdf},
+   url = {http://simonmar.github.io/bib/papers/assoc.pdf},
    doi = {http://doi.acm.org/10.1145/1040305.1040306},
    isbn = {1-58113-830-X},
    pages = {1--13},
