--- a/bib/erltc97.bib
+++ b/bib/erltc97.bib
@@ -13,7 +13,7 @@ simplification, and checking when an inferred type conforms to a
 user-supplied type signature, and report on early experience with our
 prototype.
 },
-   url = {http://simonmar.github.io/papers/erltc.pdf},
+   url = {http://simonmar.github.io/bib/papers/erltc.pdf},
    doi = {http://doi.acm.org/10.1145/258948.258962},
    isbn = {0-89791-918-1},
    pages = {136--149},
